fixed card position on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -89,8 +89,4 @@ body {
     justify-content: center;
     font-size: 3rem;
   }
-
-  html {
-    max-width: fit-content;
-  }
 }
