--- a/src/components/CardItem/CardItem.css
+++ b/src/components/CardItem/CardItem.css
@@ -8,7 +8,7 @@
   justify-content: space-evenly;
 }
 
-@media only screen and (min-width: 1024px) {
+@media screen and (min-width: 486px) {
   .cards__item {
     width: 50%;
     height: 50%;
